--- a/src/agent_tui/web/static/css/output.css
+++ b/src/agent_tui/web/static/css/output.css
@@ -755,9 +755,6 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity, 1));
-  --tw-shadow: -4px 0 0 0 #000000 inset;
-  --tw-shadow-colored: inset -4px 0 0 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .nb-sidebar-item {
@@ -874,6 +871,14 @@ video {
   height: 100vh;
 }
 
+.max-h-48 {
+  max-height: 12rem;
+}
+
+.min-h-0 {
+  min-height: 0px;
+}
+
 .w-64 {
   width: 16rem;
 }
@@ -892,6 +897,10 @@ video {
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .flex-col {
